Fix wrong ASSERT() in findAttributeInVector() https://bugs.webkit.org/show_bug.cgi?id=84756

Unreviewed build fix.

* dom/ElementAttributeData.h:
(WebCore::findAttributeInVector):

Canonical link: https://commits.webkit.org/102260@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115102 268f45cc-cd09-0410-ab3c-d52691b4dbfc